# klynxai-assistant

./: .gitignore  DRAGON_IMPROVEMENTS_DONE.md  DRAGON_IMPROVEMENTS_PLAN.md  DRAGON_TEST_PLAN.md  LAUNCH_PLAYGROUND_NOW.md  README.md  TEST_LOCAL_FIRST.md  diagnose_incidents_ui.sh  diagnose_marketing_site.sh  fix_502_error.sh  klynx_architecture.drawio  nginx_klynxai.com  setup_incidents_subdomain.sh
backend/: .env.example  README.md  __init__.py  agent_core.py  agent_tools.py  app.py  app_config.py  auto_fix_engine.py  autofix_engine.py  autofix_runner.py  cloud_outage_engine.py  history_repository.py  image_analyzer.py  incident_engine.py  incidents_db.json  klynx-backend.service.example  main.py  main.py.bak  models.py  otel_handler.py  requirements.txt  (+5 more)
shared/: README.md  pyproject.toml
shared/src/klynx_shared/: __init__.py
shared/src/klynx_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shared/src/klynx_shared/contracts/: chat_contract.py  incident_contract.py  otel_contract.py  slack_contract.py
shared/src/klynx_shared/enums/: severity.py  source.py  status.py
shared/src/klynx_shared/models/: action.py  incident.py  message.py  telemetry.py
slack/: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  slack_client.py
slack/klynx_slack_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
slack/slack_agent/: main.py
slack/slack_agent/routes/: slack_actions.py  slack_events.py  slack_interactions.py
slack/slack_agent/services/: core_client.py  slack_client.py
slack/systemd/: klynx-slack.service
(+328 files in other folders)
