[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klynx-shared"
version = "0.1.0"
description = "Shared contracts, enums, and models for KLYNX AI Agent platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["klynx_shared*"]

